Se agregan ejemplos

--- a/Laboratorio2_Josue_King.ipynb
+++ b/Laboratorio2_Josue_King.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Horas:  69\n",
+      "Minutos:  26\n",
+      "Segundos: 40\n"
+     ]
+    }
+   ],
    "source": [
     "segundos(250000)"
    ]
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +91,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "\n",
+      "  *\n",
+      " **\n",
+      "***\n",
+      "\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "\n",
+      "  *\n",
+      " **\n",
+      "***\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "triangulo(3, '*')"
    ]
@@ -98,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tienes 29 años, 5 meses y 15 dias de edad\n"
+     ]
+    }
+   ],
    "source": [
     "dia = int(input(\"Ingrese el dia de cumpleaños\"))\n",
     "mes = int(input(\"Ingrese el mes de cumpleaños\"))\n",
@@ -142,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20253035\n"
+     ]
+    }
+   ],
    "source": [
     "a = (20, 25, 30, 35)\n",
     "b = convertir(a)\n",
@@ -172,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1,), ('a', 'b'), ('a', 'b', 'c'), 'd']\n"
+     ]
+    }
+   ],
    "source": [
     "lista = [(), (), (1,), (),('a', 'b'), ('a', 'b', 'c'), ('d')]\n",
     "nueva_lista = limpiar(lista)\n",
@@ -203,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10.6, 25.0, 43.0)\n"
+     ]
+    }
+   ],
    "source": [
     "tup = ((5, 8, 9, 20, 11), (23, 25, 23, 29), (44, 49, 39, 40))\n",
     "prom = promedio(tup)\n",
@@ -233,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,9 +329,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: 1\n",
+      "Factura no encontrada\n",
+      "Facturas: \n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: \n",
+      "Opción no válida\n",
+      "Total facturas: $0.00\n",
+      "Total pendiente de pago: $0.00\n",
+      "\n",
+      "Seleccione una opción:\n",
+      "1. Agregar una nueva factura\n",
+      "2. Pagar una factura existente\n",
+      "3. Salir\n",
+      "Opción seleccionada: 3\n",
+      "Finalizado!\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    print(\"\\nSeleccione una opción:\")\n",
